tests/NormalTests/paczka1/fuzzy1/90686890.err
Error in line 14: eubQFPq S993 65,1
Error in line 15: WOkAJcJSHa2 S529 41,1
Error in line 10: nPHhKSfx A584 20,8
Error in line 26: WOkAJcJSHa2 A584 -2,7
Error in line 35: nPHhKSfx S529 29,5
